<resources>
    <string name="app_name">Quick Workout</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="loginString">Login</string>
    <string name="usernameString">Username</string>
    <string name="passwordString">Password</string>
    <string name="rememberMeString">RememberMe</string>
    <string name="dontHaveAnAccountString">Don\'t Have An Account? Signup.</string>
    <string name="signupString">Signup</string>
    <string name="passwordConfString">Re-Enter Password</string>
    <string name="maleString">Male</string>
    <string name="femaleString">Female</string>
    <string name="chooseCategoryString">Please Choose Your Workout Category</string>
    <string name="workoutNameString">Workout Name</string>
    <string name="workoutDescriptionString">Workout Description</string>
    <string name="chooseTimeString">Choose Time</string>
    <string name="minutesString">Minutes</string>
    <string name="remainingTimeString">Remaining Time</string>
    <string name="startString">Start</string>
    <string name="stopString">Stop</string>
    <string name="workoutImageString">Workout Image</string>
</resources>